tests/baselines/reference/requireOfJsonFileWithErrors.errors.txt
tests/cases/compiler/b.json(2,5): error TS1327: String literal with double quotes expected.


==== tests/cases/compiler/file1.ts (0 errors) ====
    import b1 = require('./b.json');
    let x = b1.a;
    import b2 = require('./b.json');
    if (x) {
        let b = b2.b;
        x = (b1.b === b);
    }
    
==== tests/cases/compiler/b.json (1 errors) ====
    {
        'a': true,
        ~~~
!!! error TS1327: String literal with double quotes expected.
        "b": "hello"
    }